<resources>
    <string name="app_name">SwipeTunes</string>
    <string name="action_exit">Exit</string>
    <string name="songsButton">Songs</string>
    <string name="gesturesButton">Gestures</string>
    <string name="songTitleTextView">Song Title</string>
    <string name="songArtistTextView">Artist Title</string>
    <string name="artistTextView">Artist</string>
    <string name="title_activity_song">Songs</string>
    <string name="action_fav">favorites</string>
    <string name="todo">TODO</string>
    <string name="speak">Speak</string>
    <string name="resetButtonString">Reset</string>
</resources>
